--- a/extension-manifest-v3/src/_locales/es/messages.json
+++ b/extension-manifest-v3/src/_locales/es/messages.json
@@ -85,17 +85,11 @@
   "automatically_rejects_cookie_consent_notices_": {
     "message": "Rechaza automáticamente los avisos de consentimiento de cookies."
   },
-  "automatically_rejects_of_cookie_consent_notices_": {
-    "message": "Rechaza automáticamente los avisos de consentimiento de cookies."
-  },
   "back": {
     "message": "Atrás"
   },
   "become_a_contributor": {
     "message": "Conviértete en Contribuyente"
-  },
-  "block_all": {
-    "message": "Bloquear todo"
   },
   "block_all__recommended_": {
     "message": "Bloquear todo (recomendado)"
@@ -131,9 +125,6 @@
   },
   "collapse": {
     "message": "Contraer"
-  },
-  "coming_soon": {
-    "message": "Próximamente"
   },
   "comments": {
     "message": "Comentarios",
@@ -205,9 +196,6 @@
   "eliminates_ads_on_websites_for_safe_and_fast_browsing_": {
     "message": "Elimina los anuncios de los sitios web, para navegar de forma rápida y segura."
   },
-  "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
-    "message": "Elimina los anuncios de los sitios web, para navegar de forma rápida y segura."
-  },
   "email": {
     "message": "Correo electrónico",
     "description": "Tracker category name"
@@ -248,6 +236,9 @@
   },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
     "message": "Amplía el bloqueo de anuncios de Ghostery a los buscadores en unos sencillos pasos."
+  },
+  "experimental_ad_blocking_filters": {
+    "message": "Experimental Ad-Blocking Filters"
   },
   "extensions": {
     "message": "Extensiones",
@@ -330,6 +321,9 @@
   },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Únete a Ghostery en la lucha por una web en la que la privacidad sea un derecho humano básico."
+  },
+  "helps_ghostery_fix_broken_pages_faster__by_activating_you_can_test_experimental_filters_and_support_us_with_feedback__please_send_a_message_to_support@ghostery_com_describing_how_your_experience_changed_after_enabling_": {
+    "message": "Helps Ghostery fix broken pages faster. By activating you can test experimental filters and support us with feedback. Please send a message to support@ghostery.com describing how your experience changed after enabling."
   },
   "hey__do_you_enjoy_ghostery_and_want_to_support_our_work_": {
     "message": "¿Te gusta Ghostery y quieres apoyar nuestro trabajo?"
@@ -469,9 +463,6 @@
   "pin_it_here": {
     "message": "Ánclala aquí"
   },
-  "prevent_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
-    "message": "Evita que Google redirija los enlaces de los resultados de búsqueda a través de sus servidores, en lugar de enlazar directamente a las páginas."
-  },
   "prevents_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
     "message": "Evita que Google redirija los enlaces de los resultados de búsqueda a través de sus servidores, en lugar de enlazar directamente a las páginas."
   },
@@ -511,7 +502,7 @@
   "save": {
     "message": "Guardar"
   },
-  "save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
+  "saves_and_synchronizes_your_custom_settings_between_browsers_and_devices_": {
     "message": "Guarda y sincroniza tus ajustes personalizados en todos tus navegadores y dispositivos."
   },
   "search_engine_redirect_protection": {
