--- a/extension-manifest-v3/src/_locales/pl/messages.json
+++ b/extension-manifest-v3/src/_locales/pl/messages.json
@@ -85,17 +85,11 @@
   "automatically_rejects_cookie_consent_notices_": {
     "message": "Automatycznie odrzuca komunikaty dotyczące zgody na pliki cookie."
   },
-  "automatically_rejects_of_cookie_consent_notices_": {
-    "message": "Automatycznie odrzuca komunikaty dotyczące zgody na pliki cookie."
-  },
   "back": {
     "message": "Wstecz"
   },
   "become_a_contributor": {
     "message": "Zostań Kontrybutorem"
-  },
-  "block_all": {
-    "message": "Zablokuj wszystkie"
   },
   "block_all__recommended_": {
     "message": "Zablokuj wszystkie (zalecane)"
@@ -131,9 +125,6 @@
   },
   "collapse": {
     "message": "Zwiń"
-  },
-  "coming_soon": {
-    "message": "Już wkrótce!"
   },
   "comments": {
     "message": "Komentarze",
@@ -205,9 +196,6 @@
   "eliminates_ads_on_websites_for_safe_and_fast_browsing_": {
     "message": "Usuwa reklamy na stronach internetowych, zapewniając bezpieczniejsze i szybsze przeglądanie."
   },
-  "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
-    "message": "Usuwa reklamy na stronach internetowych, zapewniając bezpieczniejsze i szybsze przeglądanie."
-  },
   "email": {
     "message": "E-mail",
     "description": "Tracker category name"
@@ -248,6 +236,9 @@
   },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
     "message": "Rozszerz blokowanie reklam Ghostery na wyszukiwarki w kilku prostych krokach."
+  },
+  "experimental_ad_blocking_filters": {
+    "message": "Experimental Ad-Blocking Filters"
   },
   "extensions": {
     "message": "Rozszerzenia",
@@ -330,6 +321,9 @@
   },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Pomóż Ghostery w walce o sieć, w której prywatność jest podstawowym prawem człowieka."
+  },
+  "helps_ghostery_fix_broken_pages_faster__by_activating_you_can_test_experimental_filters_and_support_us_with_feedback__please_send_a_message_to_support@ghostery_com_describing_how_your_experience_changed_after_enabling_": {
+    "message": "Helps Ghostery fix broken pages faster. By activating you can test experimental filters and support us with feedback. Please send a message to support@ghostery.com describing how your experience changed after enabling."
   },
   "hey__do_you_enjoy_ghostery_and_want_to_support_our_work_": {
     "message": "Hej, lubisz Ghostery i chcesz wesprzeć naszą pracę?"
@@ -469,9 +463,6 @@
   "pin_it_here": {
     "message": "Przypnij je tu"
   },
-  "prevent_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
-    "message": "Uniemożliwiaj Google przekierowywanie łączy do wyników wyszukiwania przez ich serwery zamiast bezpośredniego łączenia do stron."
-  },
   "prevents_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
     "message": "Uniemożliwiaj Google przekierowywanie łączy do wyników wyszukiwania przez ich serwery zamiast bezpośredniego łączenia do stron."
   },
@@ -511,8 +502,8 @@
   "save": {
     "message": "Zapisz"
   },
-  "save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
-    "message": "Zapisz i zsynchronizuj ustawienia niestandardowe pomiędzy przeglądarkami i urządzeniami."
+  "saves_and_synchronizes_your_custom_settings_between_browsers_and_devices_": {
+    "message": "Zapisuje i synchronizuje twoje ustawienia pomiędzy przeglądarkami i urządzeniami."
   },
   "search_engine_redirect_protection": {
     "message": "Ochrona przekierowywania wyszukiwarki"
