--- a/extension-manifest-v3/src/_locales/pt_BR/messages.json
+++ b/extension-manifest-v3/src/_locales/pt_BR/messages.json
@@ -238,7 +238,7 @@
     "message": "Expanda o bloqueio de anúncios do Ghostery para mecanismos de pesquisa em algumas etapas fáceis."
   },
   "experimental_ad_blocking_filters": {
-    "message": "Experimental Ad-Blocking Filters"
+    "message": "Filtros Experimentais de Bloqueio de Anúncios"
   },
   "extensions": {
     "message": "Extensões",
@@ -323,7 +323,7 @@
     "message": "Ajude o Ghostery a lutar por uma web onde a privacidade é um direito humano básico."
   },
   "helps_ghostery_fix_broken_pages_faster__by_activating_you_can_test_experimental_filters_and_support_us_with_feedback__please_send_a_message_to_support@ghostery_com_describing_how_your_experience_changed_after_enabling_": {
-    "message": "Helps Ghostery fix broken pages faster. By activating you can test experimental filters and support us with feedback. Please send a message to support@ghostery.com describing how your experience changed after enabling."
+    "message": "Ajuda o Ghostery a corrigir páginas quebradas mais rapidamente. Ao ativar, você pode testar filtros experimentais e nos apoiar com feedback. Por favor, envie uma mensagem para support@ghostery.com descrevendo como sua experiência mudou após a ativação."
   },
   "hey__do_you_enjoy_ghostery_and_want_to_support_our_work_": {
     "message": "Eai, você curte Ghostery e quer apoiar nosso trabalho?"
