--- a/extension-manifest-v3/src/_locales/ru/messages.json
+++ b/extension-manifest-v3/src/_locales/ru/messages.json
@@ -238,7 +238,7 @@
     "message": "Настройте блокировку рекламы от Ghostery для поисковых систем в несколько простых шагов."
   },
   "experimental_ad_blocking_filters": {
-    "message": "Experimental Ad-Blocking Filters"
+    "message": "Экспериментальные фильтры блокировки рекламы"
   },
   "extensions": {
     "message": "Расширения",
@@ -323,7 +323,7 @@
     "message": "Помогите Ghostery в борьбе за конфиденциальность как за основное право человека."
   },
   "helps_ghostery_fix_broken_pages_faster__by_activating_you_can_test_experimental_filters_and_support_us_with_feedback__please_send_a_message_to_support@ghostery_com_describing_how_your_experience_changed_after_enabling_": {
-    "message": "Helps Ghostery fix broken pages faster. By activating you can test experimental filters and support us with feedback. Please send a message to support@ghostery.com describing how your experience changed after enabling."
+    "message": "Помогает Ghostery быстрее исправлять неработающие страницы. Активировав, вы можете тестировать экспериментальные фильтры и поддерживать нас обратной связью. Пожалуйста, отправьте сообщение на support@ghostery.com, описав, как изменился ваш опыт после включения."
   },
   "hey__do_you_enjoy_ghostery_and_want_to_support_our_work_": {
     "message": "Если вам нравится Ghostery, можете поддержать нашу работу."
