--- a/extension-manifest-v3/src/_locales/it/messages.json
+++ b/extension-manifest-v3/src/_locales/it/messages.json
@@ -85,17 +85,11 @@
   "automatically_rejects_cookie_consent_notices_": {
     "message": "Rifiuta automaticamente notifiche di consenso dei cookie."
   },
-  "automatically_rejects_of_cookie_consent_notices_": {
-    "message": "Rifiuta automaticamente notifiche di consenso dei cookie."
-  },
   "back": {
     "message": "Indietro"
   },
   "become_a_contributor": {
     "message": "Diventa un collaboratore"
-  },
-  "block_all": {
-    "message": "Blocca Tutti"
   },
   "block_all__recommended_": {
     "message": "Blocca tutti (consigliato)"
@@ -131,9 +125,6 @@
   },
   "collapse": {
     "message": "Comprimi"
-  },
-  "coming_soon": {
-    "message": "In arrivo!"
   },
   "comments": {
     "message": "Commenti",
@@ -205,9 +196,6 @@
   "eliminates_ads_on_websites_for_safe_and_fast_browsing_": {
     "message": "Elimina la pubblicità nei siti web per una navigazione sicura e veloce."
   },
-  "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
-    "message": "Elimina la pubblicità nei siti web per una navigazione sicura e veloce."
-  },
   "email": {
     "message": "Email",
     "description": "Tracker category name"
@@ -248,6 +236,9 @@
   },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
     "message": "Estendi il blocco delle pubblicità di Ghostery anche ai motori di ricerca in pochi semplici passi."
+  },
+  "experimental_ad_blocking_filters": {
+    "message": "Filtri Sperimentali Blocca Pubblicità"
   },
   "extensions": {
     "message": "Estensioni",
@@ -330,6 +321,9 @@
   },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Aiuta Ghostery a lottare per un web dove la privacy è un diritto umano fondamentale."
+  },
+  "helps_ghostery_fix_broken_pages_faster__by_activating_you_can_test_experimental_filters_and_support_us_with_feedback__please_send_a_message_to_support@ghostery_com_describing_how_your_experience_changed_after_enabling_": {
+    "message": "Aiuta Ghostery a risolvere le pagine rotte più velocemente. Attivando, puoi testare filtri sperimentali e supportarci con feedback. Invia un messaggio a support@ghostery.com descrivendo come è cambiata la tua esperienza dopo l'attivazione."
   },
   "hey__do_you_enjoy_ghostery_and_want_to_support_our_work_": {
     "message": "Ti piace Ghostery e vorresti supportare il nostro lavoro?"
@@ -469,9 +463,6 @@
   "pin_it_here": {
     "message": "Blocca qui"
   },
-  "prevent_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
-    "message": "Impedisci a Google di reindirizzare i link dei risultati di ricerca ai suoi server anziché direttamente alle pagine."
-  },
   "prevents_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
     "message": "Impedisci a Google di reindirizzare i link dei risultati di ricerca ai suoi server anziché direttamente alle pagine."
   },
@@ -511,7 +502,7 @@
   "save": {
     "message": "Salva"
   },
-  "save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
+  "saves_and_synchronizes_your_custom_settings_between_browsers_and_devices_": {
     "message": "Salva e sincronizza le tue impostazioni personalizzate tra browser e dispositivi."
   },
   "search_engine_redirect_protection": {
