--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -85,17 +85,11 @@
   "automatically_rejects_cookie_consent_notices_": {
     "message": "Cookieの同意通知を自動で拒否します。"
   },
-  "automatically_rejects_of_cookie_consent_notices_": {
-    "message": "Cookieの同意通知を自動で拒否します。"
-  },
   "back": {
     "message": "戻る"
   },
   "become_a_contributor": {
     "message": "Contributorになる"
-  },
-  "block_all": {
-    "message": "すべてをブロック"
   },
   "block_all__recommended_": {
     "message": "すべてをブロック (推奨)"
@@ -131,9 +125,6 @@
   },
   "collapse": {
     "message": "折り畳む"
-  },
-  "coming_soon": {
-    "message": "近日リリース！"
   },
   "comments": {
     "message": "コメント",
@@ -205,9 +196,6 @@
   "eliminates_ads_on_websites_for_safe_and_fast_browsing_": {
     "message": "ウェブサイト上の広告を除去し、安全で高速なブラウジングを実現します。"
   },
-  "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
-    "message": "ウェブサイト上の広告を除去し、安全で高速なブラウジングを実現します。"
-  },
   "email": {
     "message": "メール",
     "description": "Tracker category name"
@@ -248,6 +236,9 @@
   },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
     "message": "簡単なステップで、Ghosteryの広告ブロッキングを検索エンジンへと拡張できます。"
+  },
+  "experimental_ad_blocking_filters": {
+    "message": "実験的な広告ブロックフィルター"
   },
   "extensions": {
     "message": "拡張機能",
@@ -330,6 +321,9 @@
   },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Ghosteryはウェブ上でのプライバシーを基本的人権だと考え、それに対する対策を講じています。ぜひサポートをお願いいたします。"
+  },
+  "helps_ghostery_fix_broken_pages_faster__by_activating_you_can_test_experimental_filters_and_support_us_with_feedback__please_send_a_message_to_support@ghostery_com_describing_how_your_experience_changed_after_enabling_": {
+    "message": "Ghosteryが壊れたページをより早く修正するのを助けます。アクティベートすることで、実験的なフィルターをテストし、フィードバックで私たちをサポートできます。有効化後の体験の変化について、詳細を含めてsupport@ghostery.comにメッセージを送ってください。あなたのフィードバックは、私たちのサービス向上に非常に役立ちます。"
   },
   "hey__do_you_enjoy_ghostery_and_want_to_support_our_work_": {
     "message": "Ghosteryが好きで、私たちの仕事をサポートしていただける方を募集中です。"
@@ -469,9 +463,6 @@
   "pin_it_here": {
     "message": "ここにピン留め"
   },
-  "prevent_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
-    "message": "検索結果のリンクを、Googleがページに直接リンクするのではなく、自社のサーバーを経由してリダイレクトするのを防ぎます。"
-  },
   "prevents_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
     "message": "検索結果のリンクを、Googleがページに直接リンクするのではなく、自社のサーバーを経由してリダイレクトするのを防ぎます。"
   },
@@ -511,7 +502,7 @@
   "save": {
     "message": "保存"
   },
-  "save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
+  "saves_and_synchronizes_your_custom_settings_between_browsers_and_devices_": {
     "message": "ブラウザとデバイス間でカスタム設定を保存・同期しましょう。"
   },
   "search_engine_redirect_protection": {
