--- a/extension-manifest-v3/src/_locales/zh_CN/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_CN/messages.json
@@ -85,17 +85,11 @@
   "automatically_rejects_cookie_consent_notices_": {
     "message": "自动拒绝 cookie 同意通知。"
   },
-  "automatically_rejects_of_cookie_consent_notices_": {
-    "message": "自动拒绝 cookie 同意通知。"
-  },
   "back": {
     "message": "返回"
   },
   "become_a_contributor": {
     "message": "成为贡献者"
-  },
-  "block_all": {
-    "message": "全部拦截"
   },
   "block_all__recommended_": {
     "message": "阻止所有（推荐）"
@@ -131,9 +125,6 @@
   },
   "collapse": {
     "message": "折叠"
-  },
-  "coming_soon": {
-    "message": "即将推出！"
   },
   "comments": {
     "message": "评论",
@@ -205,9 +196,6 @@
   "eliminates_ads_on_websites_for_safe_and_fast_browsing_": {
     "message": "清除网站上的广告，获得安全迅捷的浏览体验。"
   },
-  "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
-    "message": "清除网站上的广告，获得安全迅捷的浏览体验。"
-  },
   "email": {
     "message": "电子邮件地址",
     "description": "Tracker category name"
@@ -248,6 +236,9 @@
   },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
     "message": "只需简单几步，即可将 Ghostery 广告拦截功能扩展到搜索引擎。"
+  },
+  "experimental_ad_blocking_filters": {
+    "message": "实验性广告拦截过滤器"
   },
   "extensions": {
     "message": "扩展",
@@ -330,6 +321,9 @@
   },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "帮助 Ghostery 为建立以隐私为基本人权的网络而奋斗。"
+  },
+  "helps_ghostery_fix_broken_pages_faster__by_activating_you_can_test_experimental_filters_and_support_us_with_feedback__please_send_a_message_to_support@ghostery_com_describing_how_your_experience_changed_after_enabling_": {
+    "message": "帮助Ghostery更快修复损坏的页面。通过激活，您可以测试实验性过滤器并通过反馈支持我们。请发送消息至support@ghostery.com，详细描述启用后的体验变化。"
   },
   "hey__do_you_enjoy_ghostery_and_want_to_support_our_work_": {
     "message": "嗨，您喜欢 Ghostery 并愿意支持我们的工作吗？"
@@ -469,9 +463,6 @@
   "pin_it_here": {
     "message": "在此处锁定"
   },
-  "prevent_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
-    "message": "防止 Google 通过其服务器重定向搜索结果链接，而不是直接链接到网页。"
-  },
   "prevents_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
     "message": "防止 Google 通过其服务器重定向搜索结果链接，而不是直接链接到网页。"
   },
@@ -511,7 +502,7 @@
   "save": {
     "message": "保存"
   },
-  "save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
+  "saves_and_synchronizes_your_custom_settings_between_browsers_and_devices_": {
     "message": "保存您的自定义设置并在浏览器和设备之间同步。"
   },
   "search_engine_redirect_protection": {
